Replace toList collector with toList() in tests